--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "app_name": "محمدرضا تباری",
-    "start_time": "10:00",
+    "app_name": "الماس سیاه",
+    "start_time": "08:00",
     "end_time": "23:59"
 }
